<resources>
    <string name="anc_register_title" translatable="false">ANC</string>
    <string name="app_name">FHIR ANC</string>
    <string name="sync_wait_message">Wait while syncing data</string>

    <string name="menu_anc">ANC</string>
    <string name="menu_family">Family</string>

    <string name="family_register_message_alert">Family added. Register another member in family?</string>
    <string name="form_action_save">Save</string>
    <string name="form_action_edit">Update</string>
    <string name="family_save_label">%1$s Family</string>
    <string name="family_member_save_label">%1$s Family Member</string>
    <string name="unsaved_changes_message_alert">If you leave before saving, your edits or changes will be lost</string>
    <string name="unsaved_changes_neg">Leave</string>
    <string name="unsaved_changes_pos">Stay</string>

    <string name="family_register_button_title">Register New Family</string>
    <string name="family_register_ok_title">Yes</string>
    <string name="family_register_cancel_title">No</string>

    <string name="anc_record_visit_with_overdue">+ ANC Visit %1$d Overdue</string>

    <string name="anc_record_visit">+ ANC Visit</string>

    <string name="authenticator_account_type" translatable="false">org.smartregister.fhircore.anc</string>
    <string name="back_to_anc_clients">Back to ANC Clients</string>
    <string name="edit">Edit</string>
    <string name="edit_info">Edit info</string>
    <string name="view_family">View family</string>
    <string name="compute_bmi">Compute BMI</string>
    <string name="your_bmi">Your BMI = </string>
    <string name="re_compute">Re-Compute</string>
    <string name="bmi_categories_text">\n\n%1$s\n%2$s\n%3$s\n%4$s\n%5$s</string>
    <string name="bmi_categories_label">BMI Categories : </string>
    <string name="bmi_category_underweight">Underweight = bmi below 18.5</string>
    <string name="bmi_category_normal">Normal weight = 18.5 – 24.9</string>
    <string name="bmi_category_overweight">Overweight = 25 – 29.9</string>
    <string name="bmi_category_obesity">Obesity = BMI of 30 or greater</string>
    <string name="view_past_encounters">View past encounters</string>
    <string name="log_death">Mark as Deceased</string>
    <string name="log_death_confirm_message">Confirm you want to log death of this person. This action is irreversible.</string>
    <string name="log_death_button_title">Confirm</string>
    <string name="remove_this_person">Remove this person</string>
    <string name="remove_this_person_button_title">Remove</string>
    <string name="remove_this_person_confirm_title">Reason for removal</string>
    <string name="remove_this_person_confirm_message">Confirm you want to remove person from family</string>
    <string name="remove_this_person_reason_death">Death</string>
    <string name="remove_this_person_reason_other">Other</string>
    <string name="remove_this_person_reason_moved_away">Moved away</string>
    <string name="remove_this_person_reason_died">Died</string>
    <string name="change_head_button_title">Change</string>
    <string name="change_head_confirm_title">Select New Family Head</string>
    <string name="change_head_confirm_message"></string>
    <string name="invalid_selection">Invalid Selection</string>
    <string name="no_eligible_family_head">No eligible family members</string>
    <string name="care_plan">Care plan</string>
    <string name="see_all">See All</string>
    <string name="anc_overview">ANC Overview</string>
    <string name="anc_visit_overdue">ANC visit overdue</string>
    <string name="edd">EDD</string>
    <string name="ga">GA</string>
    <string name="no_of_fetuses">No. of fetuses</string>
    <string name="risks">Risks</string>
    <string name="anc_facility_visit">ANC facility visit</string>
    <string name="anc_home_visit">ANC home visit</string>
    <string name="upcoming_services">Upcoming Services</string>
    <string name="last_seen">Last Seen</string>
    <string name="no_care_plan">No care plan</string>
    <string name="no_services_scheduled">No services scheduled</string>
    <string name="task_not_due_yet">Task not due yet</string>
    <string name="task_already_completed">Task already completed</string>
    <string name="family_register_title">Family</string>
    <string name="mark_as_anc_client">Mark as ANC client</string>
    <string name="add_vitals">Add Vitals</string>
    <string name="add_conditions">Add Conditions</string>
    <string name="bmi_widget">BMI Widget</string>
    <string name="alergies">Allergies</string>
    <string name="none">None</string>
    <string name="health_conditions">Health conditions</string>
    <string name="vitals_7_12_2021">Vitals (7/12/2021)</string>
    <string name="bp">BP</string>
    <string name="pulse">Pulse</string>
    <string name="bg">BG</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="bmi">BMI</string>
    <string name="spO2">SpO2</string>
    <string name="new_consultation">New Consultation</string>
    <string name="select_unit">Select unit</string>
    <string name="pregnancy_outcome">Pregnancy outcome</string>
    <string name="past_encounters">Past encounters</string>

    <string name="all_families">All Families</string>
    <string name="add_member">Add Member</string>
    <string name="change_head">Change Head</string>
    <string name="encounters">Encounters</string>
    <string name="members">Members</string>

    <string name="text_view_evaluate_cql_header">Evaluate</string>
    <string name="button_cql_measure_report">Measure</string>
    <string name="button_cql_evaluate">CQL</string>
    <string name="pregnant_woman">Pregnant woman</string>
    <string name="add_family">ADD FAMILY</string>

    <string name="families">Families</string>
    <string name="anc_clients">ANC Clients</string>

    <string name="households">Households</string>
    <string name="pregnant_clients">Pregnant clients</string>
    <string name="post_natal_clients">Post-natal clients</string>
    <string name="child_clients">Child clients</string>
    <string name="family_planning_clients">Family planning clients</string>

    <string name="date_range">Date range</string>
    <string name="patient">Patient</string>
    <string name="all">All</string>
    <string name="individual">Individual</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="generate_report">Generate Report</string>
    <string name="change">Change</string>
    <string name="add">ADD</string>
    <string name="anc_visit_due">ANC visit due</string>
    <string name="household_tasks">Household Tasks</string>
    <string name="monthly_visit">Monthly Visit</string>
    <string name="head_of_household">Head of household</string>
    <string name="forward_arrow">Forward arrow</string>
    <string name="select_patient">SELECT PATIENT</string>
    <string name="search_patient_hint">Search for a patient name</string>
    <string name="remove_family">Remove Family</string>
    <string name="confirm_remove_family_message">Are you sure you want to remove this Family</string>
    <string name="confirm_remove_family_title">Remove Family</string>
    <string name="bullet_character">\u00b7</string>
    <string name="overdue">Overdue</string>
    <string name="missing_measure_report">Measure Report Missing</string>
    <string name="percentage">%</string>
    <string name="please_wait">Please wait…</string>
    <string name="so_and_so_family">%1$s Family</string>
    <string name="confirm_remove_family_alert_title">Are you sure?</string>
    <string name="remove_family_warning">Removing %1$s will remove their entire health record from your device. This action can’t be undone.</string>
    <string name="remove_family_member_warning">Removing this will remove their entire health record from your device. This action can’t be undone.</string>
    <string name="family_resource_not_found">"Family resource for that ID NOT Found"</string>
    <string name="label_remove_family_warning">Please assign a new family head, family nolonger has a family head.</string>
    <string name="label_select_new_head">Select a new head</string>
    <string name="label_assign_new_family_head">Assign new family head</string>
    <string name="alert_message_abort_operation">Are you sure you want to abort this operation?</string>
    <string name="alert_title_abort">Abort</string>
    <string name="id">ID: %1$s</string>
    <string name="sex">Sex</string>
    <string name="age">Age</string>
    <string name="dob">DOB</string>
    <string name="child_routine_visit">Child Routine visit</string>
    <string name="due_on">Due on %1$s</string>
</resources>