<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.family.details.FamilyDetailsActivity"
    android:background="@color/white_smoke">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/familyDetailToolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:contentInsetEnd="0dp"
        android:contentInsetRight="0dp"
        android:foregroundTint="@color/white"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:contentInsetEnd="0dp"
        app:contentInsetStart="0dp"
        app:navigationIcon="@drawable/ic_back"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/all_families"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/familyDetailContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/familyDetailToolbar"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        android:background="@color/colorPrimary"
        android:padding="15dp">

        <TextView
            android:id="@+id/familyName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="25sp"
            tools:text="Tuft Household"/>

        <TextView
            android:id="@+id/familySurname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:text="Lavington"/>

    </LinearLayout>

    <ScrollView
        android:id="@+id/dataBlock"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/familyDetailContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/headingMembers"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/members"
                android:textAllCaps="true"
                android:textColor="@color/status_gray"
                android:textStyle="bold"
                android:textSize="16sp"
                android:gravity="start"
                android:paddingTop="10dp"
                android:layout_margin="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/memberList"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:elevation="4dp"
                android:outlineProvider="background"
                android:clipToPadding="false"
                android:layout_margin="15dp"
                android:background="@drawable/family_member_list_background"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/headingMembers"
                app:layout_constraintEnd_toEndOf="parent"
                tools:listitem="@layout/family_member_item"
                tools:itemCount="5"/>

            <TextView
                android:id="@+id/headingEncounters"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/encounters"
                android:textAllCaps="true"
                android:textColor="@color/status_gray"
                android:textStyle="bold"
                android:textSize="16sp"
                android:gravity="start"
                android:paddingTop="10dp"
                android:layout_margin="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/memberList"
                app:layout_constraintEnd_toStartOf="@id/btnSeeAllEncounters"/>

            <TextView
                android:id="@+id/btnSeeAllEncounters"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/see_all"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryLight"
                android:textStyle="bold"
                android:textSize="16sp"
                android:gravity="start"
                android:paddingTop="10dp"
                android:layout_margin="15dp"
                android:drawablePadding="5dp"
                app:layout_constraintTop_toTopOf="@id/headingEncounters"
                app:layout_constraintBottom_toBottomOf="@id/headingEncounters"
                app:layout_constraintEnd_toEndOf="parent"
                app:drawableEndCompat="@drawable/ic_forward_arrow"
                app:drawableTint="@color/colorPrimaryLight" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/encounterList"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_marginTop="44dp"
                android:background="@drawable/family_member_list_background"
                android:clipToPadding="false"
                android:elevation="4dp"
                android:outlineProvider="background"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.551"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/headingEncounters"
                tools:itemCount="3"
                tools:listitem="@layout/family_encounter_item" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>