<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/patient_details"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundGray">


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="26dp"
                android:layout_marginRight="26dp">


                <TextView
                    android:id="@+id/txtView_carePlanHeading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/care_plan"
                    android:textAllCaps="true"
                    android:textColor="@color/darkGrayText"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/txtView_carePlanSeeAllHeading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="8dp"
                    android:text="@string/see_all"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimaryLight"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:visibility="gone"
                    app:layout_constraintEnd_toStartOf="@+id/imageView_seeAllArrow"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageView_seeAllArrow"
                    android:layout_width="8dp"
                    android:layout_height="12dp"
                    android:src="@drawable/ic_forward_arrow"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@+id/txtView_carePlanSeeAllHeading"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/txtView_carePlanSeeAllHeading" />


                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView_carePlan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="3dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="3dp"
                    android:layout_marginBottom="3dp"
                    android:clipChildren="false"
                    android:clipToPadding="false"
                    android:elevation="3dp"
                    app:cardCornerRadius="6dp"
                    app:cardElevation="3dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtView_carePlanHeading">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">


                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/carePlanListView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="14dp"
                            android:layout_marginTop="14dp"
                            android:layout_marginRight="14dp"
                            android:layout_marginBottom="14dp"
                            android:visibility="gone"
                            tools:itemCount="3"
                            tools:listitem="@layout/item_careplan" />

                        <TextView
                            android:id="@+id/txtView_noCarePlan"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="14dp"
                            android:layout_marginTop="16dp"
                            android:text="@string/no_care_plan"
                            android:textColor="@color/grayText"
                            android:textSize="18sp"
                            android:visibility="visible"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>


                <TextView
                    android:id="@+id/txtView_upcomingServicesHeading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/upcoming_services"
                    android:textAllCaps="true"
                    android:textColor="@color/darkGrayText"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cardView_carePlan" />


                <TextView
                    android:id="@+id/txtView_upcomingServicesSeeAllHeading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="8dp"
                    android:text="@string/see_all"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimaryLight"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:visibility="gone"
                    app:layout_constraintEnd_toStartOf="@+id/imageView_upcomingServicesSeeAllArrow"
                    app:layout_constraintTop_toBottomOf="@+id/cardView_carePlan" />


                <ImageView
                    android:id="@+id/imageView_upcomingServicesSeeAllArrow"
                    android:layout_width="8dp"
                    android:layout_height="12dp"
                    android:src="@drawable/ic_forward_arrow"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@+id/txtView_upcomingServicesSeeAllHeading"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/txtView_upcomingServicesSeeAllHeading" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView_upcomingServices"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="3dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="3dp"
                    android:layout_marginBottom="3dp"
                    android:clipChildren="false"
                    android:clipToPadding="false"
                    android:elevation="3dp"
                    app:cardCornerRadius="6dp"
                    app:cardElevation="3dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtView_upcomingServicesHeading">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="6dp">

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/upcomingServicesListView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:visibility="visible"
                            tools:itemCount="1"
                            tools:listitem="@layout/item_services" />

                        <TextView
                            android:id="@+id/txtView_noUpcomingServices"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="14dp"
                            android:text="@string/no_services_scheduled"
                            android:textColor="@color/grayText"
                            android:textSize="18sp"
                            android:visibility="gone"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />


                    </LinearLayout>
                </androidx.cardview.widget.CardView>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/cardView_upcomingServices" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.core.widget.NestedScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
